  * Also merge tags in merge-package.
  * Adapt to the python-apt 0.8 API. Thanks to Julian Andres Klode.
    (Closes: #572093)
  * Fix merge-upstream with just a branch. (LP: #528273)

  [ John Arbash Meinel ]
  * Improve the changelog merge hook to be smarter when both sides change.

  [ Steve Langasek ]
  * Make merge-upstream --v3 unpack .tar.bz2 with the correct arguments.
    (LP: #529900)

 -- Jelmer Vernooij <jelmer@debian.org>  Sat, 13 Feb 2010 01:16:00 +0100

bzr-builddeb (2.3) experimental; urgency=low

  [ James Westby ]
  * Some support for v3 source formats (Closes: #562991)
    - Those that look quite a lot like v1 are supported well.
    - .tar.bz2 tarballs are supported for import, building, merge-upstream,
      etc., but only enabled for the latter with a --v3 switch for now.
    - Multiple orig.tar.gz is not supported.
    - .tar.lzma is not supported awaiting pristine-tar support.
  * New "dh-make" command ("dh_make" alias) that allows you to start
    packaging, either in an empty branch, or based on an upstream branch.
  * Fix merge-package for native packages (LP: #476348)
  * debian/changelog merge hook to reduce the manual conflict resolution
    required there. Thanks to John Arbash Meinel and Andrew Bennetts
    (LP: #501754).
    - Requires newer bzr.
  * Fix merge-package outside a shared repo (LP: #493462)
  * Fix exporting of symlinks (LP: #364671)
  * Add --force option to merge-upstream which may help certain people.
  * Use system configobj if the bzr copy isn't available. Thanks Jelmer.
  * Make merging multiple-root branches work. Thanks Robert Collins.
  * Disentangle from bzrtools. Thanks Max Bowser.

  [ Jelmer Vernooij ]
  * Bump standards version to 3.8.4.
  * Fix formatting in doc-base.

 -- Jelmer Vernooij <jelmer@debian.org>  Sat, 13 Feb 2010 00:44:03 +0100

bzr-builddeb (2.2) unstable; urgency=low

  * Upload to unstable.
  * Bump standards version to 3.8.3.
